--- a/app.json
+++ b/app.json
@@ -22,9 +22,9 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#FFE4F0",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#2D1B2E"
           }
         }
       ]
